配信管理機能を追加 改行コード修正

--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -107,10 +107,15 @@ ja:
   #
   ext_out_field: 外部出力
   delivery_place: 配信先
+  delivery_status: 配信状況
   commons: 公共情報コモンズ
   machicomi: まちcomi
   twitter: Twitter
   facebook: Facebook
 
   notice_delivery_request_successful: 配信要求を行いました。
+  notice_delivery_request_reject: 配信要求を却下しました。
   notice_delivery_request_failed: 配信要求に失敗しました。
+  notice_delivery_successful: 配信を行いました。
+  notice_delivery_unselected: 配信先が選択されていません。
+  notice_delivery_failed: 配信に失敗しました。
