配信管理自動配信 作成途中 手動配信修正

--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -128,6 +128,8 @@ ja:
   project_module_deliver_issues: 配信管理機能
   permission_request_delivery: 配信要求
   permission_allow_delivery: 配信許可
+  allow: 許可
+  reject: 却下
 
   ext_out_field: 外部出力
   delivery_place: 配信先
