配信管理自動配信処理修正 配信一覧モジュール追加(作成途中)

--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -132,6 +132,7 @@ ja:
   project_module_deliver_issues: 配信管理機能
   permission_request_delivery: 配信要求
   permission_allow_delivery: 配信許可
+  project_module_deliver: 配信管理
   allow: 許可
   reject: 却下
 
