--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -5,6 +5,7 @@ ja:
   label_search_condition_plural: 検索条件
   button_new: 新規登録
   map: 地図
+  description_project_identifier_on_create: システムで自動設定されます
   
   activerecord:
     errors:
