--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -208,3 +208,7 @@ ja:
     field_created_at: 登録日時
     field_updated_at: 更新日時
 
+  # GoogleMaps入力
+  button_map_show: 地図を表示
+  button_map_hide: 地図を隠す
+  label_address: 住所(マップ)
