--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -64,6 +64,7 @@ ja:
     field_disaster_code: 災害コード
     field_name: 避難所名
     field_name_kana: 避難所名カナ
+    field_area: 地区名
     field_address: 住所
     field_phone: 電話番号
     field_fax: FAX番号
