--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -57,12 +57,14 @@ ja:
   
   notice_shelter_successful_create: 避難所 %{id} が作成されました。
   text_shelter_destroy_confirmation: '本当に削除しますか？'
+  error_not_exists_shelters: 避難所情報が存在しません。
   
   # 項目名
   shelters:
     field_disaster_code: 災害コード
     field_name: 避難所名
     field_name_kana: 避難所名カナ
+    field_area: 地区名
     field_address: 住所
     field_phone: 電話番号
     field_fax: FAX番号
