--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -172,10 +172,10 @@ ja:
   
   notice_evacuation_advisory_successful_create: 避難勧告･指示 %{id} が作成されました。
   text_evacuation_advisory_destroy_confirmation: '本当に削除しますか？'
+  error_not_exists_evacuation_advisories: 避難所情報が存在しません。
   
   # 避難勧告･指示機能 項目名
   evacuation_advisories:
-#   field_type: 勧告種別
     field_advisory_type: 避難勧告･指示種別
     field_disaster_code: 災害コード
     field_sort_criteria: 発令区分
@@ -207,8 +207,8 @@ ja:
     field_evacuation_steps_by_authorities: 住民の避難に関して関係機関が講ずべき措置の概要
 
     field_remarks: 備考
-#     field_created_at: 登録日時
-#     field_updated_at: 更新日時
+    #field_created_at: 登録日時
+    #field_updated_at: 更新日時
 
     field_issued_at: 発令日時
     field_changed_at: 移行日時
