災害被害情報（第４号様式）機能　チケット登録処理を実装

--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -7,6 +7,7 @@ ja:
   button_new: 新規登録
   map: 地図
   description_project_identifier_on_create: システムで自動設定されます
+  text_select_tracker: 登録するチケットのトラッカーを選んでください
   
   activerecord:
     errors:
