--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -8,13 +8,12 @@ ja:
   map: 地図
   description_project_identifier_on_create: システムで自動設定されます
   text_select_tracker: 登録するチケットのトラッカーを選んでください
+  text_custom_field_default_value_multiple_info: '初期値が複数の場合は、1行に1個ずつ記述してください。'
   
   activerecord:
     errors:
       messages:
         not_an_integer: は整数で入力してください
-  
-  field_is_default_all_selected: デフォルト全選択
   
   ####
   # 課題管理機能
