配信管理 コントロールプレーン部新規作成

--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -148,6 +148,7 @@ ja:
   ext_out_field: 外部出力
   delivery_place: 配信先
   delivery_status: 配信状況
+  control_plane_settings: コントロールプレーン部 設定内容
   commons: 公共情報コモンズ
   machicomi: まちcomi
   twitter: Twitter
