カスタムフィールドの日付で、時刻有無を設定できるように実装。カスタムフィールド日時の入力補助機能を追加。

--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -14,6 +14,15 @@ ja:
     errors:
       messages:
         not_an_integer: は整数で入力してください
+        not_a_datetime: "は日時を入力してください。"
+  
+  field_include_time: 時刻を含む
+  datetimepicker:
+    time: 時刻
+    hour: 時
+    minute: 分
+    current: 現在日時
+    close: 閉じる
   
   ####
   # 課題管理機能
