プロジェクト自動作成処理における猶予期間[日]の設定、および自動作成時のチェック処理を実装

--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -364,3 +364,11 @@ ja:
     result:
       success: '%{kind} アカウントによる個人認証に成功しました。'
       failure: '%{kind} アカウントによる個人認証に失敗しました。'
+
+  # プロジェクト自動作成
+  auto_launch_project:
+    field_term: 'プロジェクト自動作成における猶予期間[日]'
+    text_term_description: |
+      プロジェクト自動作成機能において、前回の自動作成した日付から設定期間の間は、自動作成が実行されません。
+      期間無しの場合は0を設定してください。
+      例) 前回自動作成日付:4/1, 設定期間:7 ⇒ 4/8～自動作成が実行
