--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -183,7 +183,23 @@ ja:
   notice_evacuation_advisory_successful_create: 避難勧告･指示 %{id} が作成されました。
   text_evacuation_advisory_destroy_confirmation: '本当に削除しますか？'
   error_not_exists_evacuation_advisories: 避難勧告･指示情報が存在しません。
-  
+
+  # 配信履歴 項目名
+  field_mail_subject: 情報のタイトル
+  field_summary: 情報の見出し要約文
+  field_type_update: 情報の更新種別
+  field_description_cancel: 取消の説明文
+  field_published_at: 情報の発表日時
+  field_published_date: 情報の発表日時(日付)
+  field_published_hm: 情報の発表日時(時間)
+  field_delivered_area: 情報の配信対象地域
+  field_opened_at: 情報の公開開始日時
+  field_opened_date: 情報の公開開始日時(日付)
+  field_opened_hm: 情報の公開開始日時(時間)
+  field_closed_at: 情報の公開終了日時
+  field_closed_date: 情報の公開終了日時(日付)
+  field_closed_hm: 情報の公開終了日時(時間)
+
   # 避難勧告･指示機能 項目名
   evacuation_advisories:
     field_advisory_type: 避難勧告･指示種別
