--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -255,7 +255,7 @@ ja:
   permission_view_disaster_damage: 災害被害情報の閲覧
   permission_manage_disaster_damage: 災害被害情報の管理
 
-  label_disaster_damage: 災害被害情報（第４号様式）
+  label_disaster_damage: 第４号様式
 
   notice_disaster_damage_successful_save: 災害被害情報が保存されました。
   error_not_exists_disaster_damage: 災害被害情報が存在しません。
