--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -187,6 +187,7 @@ ja:
   text_evacuation_advisory_destroy_confirmation: '本当に削除しますか？'
   text_evacuation_advisory_update_confirmation: '更新してよろしいですか？'
   error_not_exists_evacuation_advisories: 避難勧告･指示情報が存在しません。
+  error_not_exists_announcement: 避難勧告等が発令された地区が存在しません。
 
   # 配信履歴 項目名
   field_mail_subject: 情報のタイトル
