--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -4,6 +4,7 @@ ja:
   #
   target_municipality: 石巻市
   label_search_condition_plural: 検索条件
+  label_detail: 詳細
   button_new: 新規登録
   map: 地図
   description_project_identifier_on_create: システムで自動設定されます
@@ -64,7 +65,7 @@ ja:
   label_shelter_new: 避難所登録・更新
   
   button_bulk_update: 更新
-  button_ticket: チケット登録
+  button_ticket: 登録
   button_summary: 集計
   
   notice_shelter_successful_create: 避難所 %{id} が作成されました。
@@ -182,6 +183,8 @@ ja:
   label_evacuation_advisory: 避難勧告･指示
   label_evacuation_advisory_plural: 避難勧告･指示一覧
   label_evacuation_advisory_new: 避難勧告･指示登録・更新
+  
+  button_new_area: 新規地区
 
   notice_evacuation_advisory_successful_create: 避難勧告･指示 %{id} が作成されました。
   text_evacuation_advisory_destroy_confirmation: '本当に削除しますか？'
