権限名の修正

--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -110,7 +110,8 @@ ja:
   # 配信管理機能
   #
   project_module_delivery_histories: 配信管理機能
-  permission_request_delivery: 配信要求
+  permission_request_delivery: 配信要求の管理
+  request_delivery: 配信要求
   project_module_deliver: 配信管理
 
   label_ext_out_field: 外部配信
