設定ファイルの修正

--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -41,7 +41,7 @@ ja:
       failure: '%{kind} アカウントによる個人認証に失敗しました。'
   # 認証
   google: 'Google'
-  teitter: 'Twitter'
+  twitter: 'Twitter'
   facebook: 'Facebook'
   openam: 'OpenAM'
 
