チケット一覧の検索機能の「適用」ボタン名称を「検索」に変更

--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -9,7 +9,7 @@ ja:
   button_curd_confirm: この内容で保存してよろしいですか？
   button_ticket_confirm: チケットを登録してよろしいですか？
   text_select_tracker: 登録するチケットのトラッカーを選んでください
-  button_serch: 検索
+  button_search: 検索
 
   activerecord:
     errors:
