--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -162,6 +162,8 @@ ja:
     failed: 配信失敗
     runtime: 配信中
     reserve: 配信予定
+    
+  notice_delivery_status: '%{kind}のため取り消しできません。'
 
   ####
   # 避難勧告･指示機能
