ジオコーディング修正と避難勧告と避難所の登録ボタンを押した時にエラーメッセージを追加

--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -187,6 +187,7 @@ ja:
   text_evacuation_advisory_update_confirmation: '更新してよろしいですか？'
   error_not_exists_evacuation_advisories: 避難勧告･指示情報が存在しません。
   error_not_exists_announcement: 避難勧告等が発令された地区が存在しません。
+  error_update_not_entry: '更新ボタンを先に押してください'
 
   # 項目名
   evacuation_advisories:
