--- a/plugins/lgdis/config/locales/ja.yml
+++ b/plugins/lgdis/config/locales/ja.yml
@@ -10,8 +10,8 @@ ja:
   button_ticket_confirm: チケットを登録してよろしいですか？
   text_select_tracker: 登録するチケットのトラッカーを選んでください
   button_search: 検索
-  document_id: ドキュメントID
-  document_revision: 版番号
+  document_id: 発行済ドキュメントID
+  document_revision: 発行済版番号
 
   activerecord:
     errors:
